Ignore deprecations in TP_BASE_CONNECTION_ERROR_IF_NOT_CONNECTED

This macro is now implemented using in tp_base_connection_check_connected()
which is annotated with _TP_AVAILABLE_IN_UNRELEASED, but we shouldn't raise an
error if app don't want to use 0.20 API yet.

https://bugs.freedesktop.org/show_bug.cgi?id=50712